--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Kunduzgi ranglar -->
+    <color name="light_primary">#1976D2</color>
+    <color name="light_primary_variant">#42A5F5</color>
+    <color name="light_secondary">#2196F3</color>
+    <color name="light_background">#E3F2FD</color>
+
+    <!-- Tungi ranglar -->
+    <color name="dark_primary">#0288D1</color>
+    <color name="dark_primary_variant">#0277BD</color>
+    <color name="dark_secondary">#039BE5</color>
+    <color name="dark_background">#121212</color>
 </resources>
